# Glee

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: PRD.md  VISION.md  adaptive-workflows.md  agentic.md  arbitration.md  continuity-layer.md  memory.md  subagents.md  tools.md  warmup.md  workflows.md
glee/: __init__.py  __main__.py  cli.py  config.py  logging.py  mcp_server.py  server.py  types.py
glee/agents/: base.py  claude.py  codex.py  gemini.py
glee/auth/: storage.py
glee/connect/: __init__.py
glee/graph/: __init__.py  review_graph.py
glee/memory/: __init__.py  store.py
glee/services/: __init__.py  codex_cli.py
glee/state/: __init__.py  session.py  storage.py
