[project]
name = "glee"
version = "0.1.0"
description = "Multi-Agent Code Collaboration Platform - Multiple AIs working together like a Glee Club"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
]

[project.scripts]
glee = "glee.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
